[gd_scene load_steps=13 format=3 uid="uid://cymw13qsausvp"]

[ext_resource type="Script" path="res://Scripts/UIs/main_menu.gd" id="1_6q5lx"]
[ext_resource type="Texture2D" uid="uid://bw51r3yrfbhrj" path="res://Assets/Sprites/UI/Unej-Jember.jpg" id="2_or48d"]
[ext_resource type="FontFile" uid="uid://c5fjgx33wdlaf" path="res://Assets/Sprites/UI/ARCADECLASSIC.TTF" id="3_3rh2e"]
[ext_resource type="Texture2D" uid="uid://dmn0iqvmwvdv" path="res://Assets/Sprites/UI/Button/btn-start.png" id="4_na08j"]
[ext_resource type="Texture2D" uid="uid://dsxyekajf6eb1" path="res://Assets/Sprites/UI/Button/btn-settings.png" id="5_3daxc"]
[ext_resource type="Script" path="res://Scripts/UIs/load.gd" id="5_cms8s"]
[ext_resource type="Texture2D" uid="uid://dnyrt03q60vww" path="res://Assets/Sprites/UI/Button/btn-exit.png" id="6_8ec4f"]

[sub_resource type="LabelSettings" id="LabelSettings_4am6i"]
line_spacing = 6.0
font = ExtResource("3_3rh2e")
font_size = 70

[sub_resource type="Animation" id="Animation_r56wi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_tdu6x"]
resource_name = "screen_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4fmia"]
resource_name = "screen_fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sv73r"]
_data = {
"RESET": SubResource("Animation_r56wi"),
"screen_fade_in": SubResource("Animation_tdu6x"),
"screen_fade_out": SubResource("Animation_4fmia")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_6q5lx")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer2"]
modulate = Color(0.252028, 0.252028, 0.252028, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -968.0
offset_top = -466.0
offset_right = 968.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_or48d")

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Load" type="TouchScreenButton" parent="CanvasLayer2/Control"]
visible = false
position = Vector2(-128, 4.76837e-07)
scale = Vector2(1.29949, 0.709677)
script = ExtResource("5_cms8s")

[node name="Setting" type="TouchScreenButton" parent="CanvasLayer2/Control"]
position = Vector2(-128, 88)
scale = Vector2(0.948148, 0.715447)
texture_normal = ExtResource("5_3daxc")

[node name="Play" type="TouchScreenButton" parent="CanvasLayer2/Control"]
position = Vector2(-128, -24)
scale = Vector2(1.29949, 0.709677)
texture_normal = ExtResource("4_na08j")

[node name="Quit" type="TouchScreenButton" parent="CanvasLayer2/Control"]
position = Vector2(-128, 192)
scale = Vector2(1.20755, 0.709677)
texture_normal = ExtResource("6_8ec4f")

[node name="Label" type="Label" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -320.0
offset_right = 576.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Game   Pengenalan    Lingkungan
Kampus"
label_settings = SubResource("LabelSettings_4am6i")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2"]
libraries = {
"": SubResource("AnimationLibrary_sv73r")
}
speed_scale = 1.5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2/AnimationPlayer"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CanvasLayer2/Control/Load" to="." method="_on_load_pressed"]
[connection signal="released" from="CanvasLayer2/Control/Load" to="." method="_on_load_released"]
[connection signal="pressed" from="CanvasLayer2/Control/Setting" to="." method="_on_setting_pressed"]
[connection signal="released" from="CanvasLayer2/Control/Setting" to="." method="_on_setting_released"]
[connection signal="pressed" from="CanvasLayer2/Control/Play" to="." method="_on_play_pressed"]
[connection signal="released" from="CanvasLayer2/Control/Play" to="." method="_on_play_released"]
[connection signal="pressed" from="CanvasLayer2/Control/Quit" to="." method="_on_quit_pressed"]
[connection signal="released" from="CanvasLayer2/Control/Quit" to="." method="_on_quit_released"]
[connection signal="animation_finished" from="CanvasLayer2/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
